Add Flyway migrations, externalize secrets, Render free-deploy blueprint
- Flyway baseline (generated from JPA entities) + ddl-auto=validate
- render.yaml: web + free Postgres + free Key Value (Redis), one-click deploy
- Remove committed JWT/Google/PayPal secrets; OAuth & PayPal now optional
- JwtService generates ephemeral dev key when JWT_SECRET unset
- server.port honors $PORT; /actuator/health permitted; Redis excluded from health
- Drop unused spring-boot-starter-batch; fix Testcontainers test infra

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>